Added option to skip being banker

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             var bet5ButtonInfo = [50,500,50,25];
             var betLockButtonInfo = [50,400,50,25];
             var selectionLockButtonInfo = [50,450,50,25];
+            var bankerSelectionInfo = [1000,500,50,25];
 
             var tileLocations = [[665,545],[750,545],[98,72],[182,72],[286,72],[370,72],[478,74],[562,74],[666,74],[750,74],[97,229],[181,229],[285,229],[369,229],[477,231],[561,231],[655,231],[749,231],[96,386],[180,386],[284,386],[368,386],[476,388],[560,388],[664,388],[748,388],[96,543],[180,543],[284,543],[368,543],[476,545],[560,545]];
 
@@ -97,6 +98,18 @@
                     //x,y are the coordinates of the top left corner of the banker symbol
                     ctx.fillStyle = "#FFFFFF";
                     ctx.fillRect(x,y,20,20);
+
+                    //also draw the selection box for banking on players turn
+                    ctx.fillStyle = "#000000";
+                    ctx.fillRect(bankerSelectionInfo[0],bankerSelectionInfo[1],bankerSelectionInfo[2],bankerSelectionInfo[3]);
+                    if(game.bankOnTurn){
+                        ctx.fillStyle = "#00FF00";
+                        ctx.fillText("Bank",bankerSelectionInfo[0],bankerSelectionInfo[1]);
+                    }
+                    else{
+                        ctx.fillStyle = "#CC0000";
+                        ctx.fillText("Skip",bankerSelectionInfo[0],bankerSelectionInfo[1]);
+                    }
                 }
 
                 drawTileBack = function(x,y){
@@ -254,6 +267,7 @@
             game['clickedTiles'] = [];  //Contains the index 0-3 of the tile that was clicked
             game['lastConfirmedSelection'] = []; //the last verified valid selection, is used if the player ends selection phase unlocked
             game['dealerTiles'] = [];
+            game['bankOnTurn'] = true; //whether the player elects to bank or not
 
 			var updateGameInfo = function(){
                 //Prints seconds remaining, game state, etc
@@ -593,6 +607,18 @@
                                 // console.log(game.clickedTiles);
                                 // console.log(game.selectedTiles);
                             }
+                        }
+                    }
+
+                    // Click on banker selection button
+                    if(x>bankerSelectionInfo[0] && x<bankerSelectionInfo[0]+bankerSelectionInfo[2] && y>bankerSelectionInfo[1] && y < bankerSelectionInfo[1]+bankerSelectionInfo[3]){
+                        if(game.bankOnTurn){
+                            game.bankOnTurn = false;
+                            socket.emit('bank on turn',false);
+                        }
+                        else{
+                            game.bankOnTurn = true;
+                            socket.emit('bank on turn',true);
                         }
                     }
 
