--- a/index.html
+++ b/index.html
@@ -235,6 +235,12 @@
                     drawWagers();
                     drawBettingButtons();
                     drawSelectionLockButtons();
+
+                    if(!game.playerActive){
+                        ctx.fillStyle = "#000000";
+                        ctx.font = "30px Arial";
+                        ctx.fillText("INSUFFICIENT FUNDS",450,350);
+                    }
                 }
 
                 setInterval(function(){
@@ -268,6 +274,7 @@
             game['lastConfirmedSelection'] = []; //the last verified valid selection, is used if the player ends selection phase unlocked
             game['dealerTiles'] = [];
             game['bankOnTurn'] = true; //whether the player elects to bank or not
+            game['playerActive'] = true;
 
 			var updateGameInfo = function(){
                 //Prints seconds remaining, game state, etc
@@ -421,6 +428,10 @@
                 // Information about the game from the server
                 socket.on('pregame game information',function(banker){
                     game.banker = banker;
+                });
+                // Server informs client that he doesnt have enough money to continue
+                socket.on('insufficient funds',function(){
+                    game.playerActive = false;
                 });
 
     			setInterval(function(){
@@ -621,8 +632,6 @@
                             socket.emit('bank on turn',true);
                         }
                     }
-
-
                 });
 			});
 
